--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.11",
+    "concurrently": "^6.2.0",
+    "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -20,7 +22,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently 'react-scripts start' 'json-server -p 3001 --watch src/api/db.json'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
