--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.11",
     "concurrently": "^6.2.0",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.1",
+    "react-modal": "^3.14.3",
     "react-query": "^3.19.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.1.2",
